# zim-hide

./: Cargo.toml  PROTOCOL.md  README.md  justfile
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md
man/: zimhide-completions.1  zimhide-decode.1  zimhide-encode.1  zimhide-inspect.1  zimhide-keygen.1  zimhide-play.1  zimhide.1
src/: lib.rs  main.rs  progress.rs
src/audio/: compress.rs  mod.rs
src/commands/: decode.rs  encode.rs  inspect.rs  keygen.rs  mod.rs  play.rs
src/crypto/: asymmetric.rs  keys.rs  mod.rs  signing.rs  symmetric.rs
src/format/: mod.rs  payload.rs
src/stego/: lsb.rs  metadata.rs  mod.rs  traits.rs
src/wav/: mod.rs  reader.rs  writer.rs
tests/: integration.rs
tests/common/: mod.rs
