[package]
name = "vvw"
version = "0.1.0"
edition = "2024"
description = "WAV steganography CLI for embedding and extracting encrypted text/audio"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
hound = "3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
base64 = "0.22"
thiserror = "1"
anyhow = "1"
rand = "0.8"
tempfile = "3"
which = "7"
