[package]
name = "zimhide"
version = "0.2.2"
edition = "2024"
description = "Zim Steganography Toolkit - WAV steganography CLI for embedding and extracting encrypted text/audio"
license = "MIT"
repository = "https://github.com/navicore/zim-steganography-toolkit"
homepage = "https://github.com/navicore/zim-steganography-toolkit"
documentation = "https://github.com/navicore/zim-steganography-toolkit"
readme = "README.md"
keywords = ["steganography", "wav", "audio", "encryption", "cli"]
categories = ["command-line-utilities", "cryptography", "multimedia::audio"]

[[bin]]
name = "zimhide"
path = "src/main.rs"

[features]
default = ["opus-compression"]
opus-compression = ["dep:opus"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
hound = "3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
base64 = "0.22"
thiserror = "1"
anyhow = "1"
rand = "0.8"
tempfile = "3"
which = "7"
opus = { version = "0.3", optional = true }
